# rtx

./: .drone.yml  .gitignore  .gitmodules  .syntastic_includes_file_  .ycm_extra_conf.py  CMakeLists.txt  Dockerfile  README.md  build.sh
assets/models/: venus.mtl
cmake/: CMakeCompilerSettings.cmake  Findglm.cmake  Utils.cmake
src/: CMakeLists.txt  main.cc
src/render/: acceleration_structure.h  camera.h  constants.h  depth_buffer.h  descriptor_sets.h  engine.h  glm.h  helpers.h  layer_properties.h  memory.h  object.h  platform.h  ray_tracing_extensions.cc  ray_tracing_extensions.h  single_time_command.h  swap_chain_buffer.h  texture_data.h  uniform_data.h  vertex.h  vertex_buffer.h
src/render/raytracing/: acceleration_structure.h  acceleration_structure_instance.h  bottom_level_acceleration_structure.h  descriptor_pool.h  ray_tracer.h  storage_image.h  top_level_acceleration_structure.h
src/shaders/: draw_cube.frag  draw_cube.vert  material.glsl  random.glsl  ray_common.glsl  raytrace.rchit  raytrace.rgen  raytrace.rmiss  raytrace_shadow.rmiss  temperature.glsl  vertex.glsl
